scrollbar fix

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -39,6 +39,8 @@ h3 {
   padding-top: 4.5rem;
   text-align: center;
   font-style: italic;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .navbar h2 {
@@ -47,6 +49,8 @@ h3 {
   padding-bottom: 3rem;
   text-align: center;
   font-style: italic;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .navbar img {
@@ -74,8 +78,6 @@ h3 {
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 /* -------- LAYOUT OVERALL -------- */
@@ -105,6 +107,10 @@ main {
   padding: 3.5rem;
   background: rgb(222, 225, 229);
   box-shadow: 0px 2px 5px rgb(0, 0, 0.1);
+}
+
+.about_wrapper h2 {
+text-align: left;
 }
 
 .home_intro_wrapper,
@@ -253,7 +259,7 @@ footer .icon img {
   flex-direction: row;
   overflow-x: auto;
   scroll-behavior: smooth;
-  white-space: wrap;
+  flex-wrap: nowrap;
   gap: 2rem;
   padding: 4rem;
   background: rgb(36, 36, 36);
@@ -326,7 +332,7 @@ footer .icon img {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  max-width: 85%;
+  max-width: 75%;
   padding: 3rem 0rem;
   font-size: 16px;
   color: whitesmoke;
